# c_study

./: CMakeLists.txt  README.md
01-grammar/: CMakeLists.txt
01-grammar/01-base/: CMakeLists.txt  dm01_helloworld.c  dm02_area_circle.c  dm03_sum.c  dm04_main_before_after.c  dm05_macro.c  dm06_sum.c
01-grammar/02-data_struct/: CMakeLists.txt  dm02_data_type.c  dm03_data_operation_auto.c  dm04_data_operation_force.c  dm05_bit.c  dm06_for.c  dm07_switch.c  dm08_water_num.c  dm09_bit.c  dm10_bubblesort.c
01-grammar/02-data_struct/dm01_c_file_struct/: main.c  sub_func.c  sub_func.h
01-grammar/03-array_function/: CMakeLists.txt  dm01_array1.c  dm02_array2.c  dm03_array_char.c  dm04_function1.c  dm05_function2.c  dm06_function3.c  dm08_static_variable.c  dm10_days.c  dm11_tax_income.c  dm12_define.c  dm13_letter_game.c  dm14_show_human_number.c
01-grammar/03-array_function/dm07_function4/: func.c  func.h  main.c
01-grammar/03-array_function/dm09_var_static_extern/: fun1.c  fun2.c  main.c
01-grammar/04-define_library/: CMakeLists.txt  dm01_define1.c  dm02_define2.c  dm04_condition_compile.c  dm05_previous_define.c
01-grammar/04-define_library/dm03_ifndef/: fun.h  main.c  stu.h
01-grammar/04-define_library/dm06_library1/: CMakeLists.txt  library.c  library.h  main.c
01-grammar/05-point/: CMakeLists.txt  dm01_memory.c  dm02_point_var.c  dm03_point_force.c  dm04_string_point.c  dm05_aver_point1.c  dm06_aver_point2.c  dm07_aver_point3.c  dm08_aver_point4.c  dm09_point_func.c  dm10_point_func.c  dm11_main_param.c  dm12_point_point.c  dm13_string_rever.c  dm14_strlen.c  dm15_strcpy.c  dm16_string_to_num.c  dm17_strcmp.c
01-grammar/06-point_and_string/: CMakeLists.txt  dm01_malloc.c  dm02_calloc.c  dm03_strtok.c  dm04_realloc.c  dm05_strlen.c  dm06_strcpy_strncpy.c  dm07_strcat_strncat.c  dm08_strcmp_strncmp.c  dm09_strchr_strstr.c  dm10_memset.c  dm11_atoi.c  dm12_strtok.c  dm13_sscanf_sprintf.c  dm14_sscanf.c
01-grammar/07-struct_union_enum/: CMakeLists.txt  dm01_struct_var.c  dm02_struct_var2.c  dm03_struct_var3.c  dm04_struct_point.c  dm05_struct_sizeof.c  dm06_struct_bit.c  dm07_union.c  dm08_union_big_endian.c  dm09_enum.c
01-grammar/08-link/: CMakeLists.txt  dm01_link_create_print_free.c  dm02_link_search_node.c  dm03_link_delete_node.c  dm04_link_insert_node.c  dm05_link_order.c  dm06_link_reverse.c  dm07_double_link_create_print_free.c  dm08_double_link_delete_node.c  dm09_double_link_insert_node.c
01-grammar/09-file/: CMakeLists.txt  dm01_fgetc.c  dm02_fgets_fputs.c  dm03_fread_fwrite.c  dm04_fprintf_fscanf.c  dm05_fseek.c  dm06_feof.c  dm07_ferror.c  test.txt
02-system/: CMakeLists.txt
02-system/01-system_call/: CMakeLists.txt  dm01_cp_command.c
02-system/02-process/: CMakeLists.txt  dm01_pid.c  dm02_fork1.c  dm03_fork2.c  dm04_fork3.c  dm05_wait.c  dm06_waitpid.c  dm07_atexit.c  dm08_vfork1.c  dm09_vfork2.c  dm10_execl.c  dm11_execlp.c  dm12_execle.c  dm12_test.c  dm13_execv.c  dm14_execvp.c  dm15_execve.c  dm16_system.c  dm17_system_command.c
grammar/base/: CMakeLists.txt
