add_executable(dm01_memory dm01_memory.c)
add_executable(dm02_point_var dm02_point_var.c)
add_executable(dm03_point_force dm03_point_force.c)
add_executable(dm04_string_point dm04_string_point.c)
add_executable(dm05_aver_point1 dm05_aver_point1.c)
add_executable(dm06_aver_point2 dm06_aver_point2.c)
add_executable(dm07_aver_point3 dm07_aver_point3.c)
add_executable(dm08_aver_point4 dm08_aver_point4.c)
add_executable(dm09_point_func dm09_point_func.c)
add_executable(dm10_point_func dm10_point_func.c)
add_executable(dm11_main_param dm11_main_param.c)
add_executable(dm12_point_point dm12_point_point.c)
add_executable(dm13_string_rever dm13_string_rever.c)
add_executable(dm14_strlen dm14_strlen.c)
add_executable(dm15_strcpy dm15_strcpy.c)
add_executable(dm16_string_to_num dm16_string_to_num.c)
add_executable(dm17_strcmp dm17_strcmp.c)
