add_executable(dm01_malloc dm01_malloc.c)
add_executable(dm02_calloc dm02_calloc.c)
add_executable(dm03_strtok dm03_strtok.c)
add_executable(dm04_realloc dm04_realloc.c)
add_executable(dm05_strlen dm05_strlen.c)
add_executable(dm06_strcpy_strncpy dm06_strcpy_strncpy.c)
add_executable(dm07_strcat_strncat dm07_strcat_strncat.c)
add_executable(dm08_strcmp_strncmp dm08_strcmp_strncmp.c)
add_executable(dm09_strchr_strstr dm09_strchr_strstr.c)
add_executable(dm10_memset dm10_memset.c)
add_executable(dm11_atoi dm11_atoi.c)
add_executable(dm12_strtok dm12_strtok.c)
add_executable(dm13_sscanf_sprintf dm13_sscanf_sprintf.c)
add_executable(dm14_sscanf dm14_sscanf.c)
