add_executable(dm01_struct_var dm01_struct_var.c)
add_executable(dm02_struct_var2 dm02_struct_var2.c)
add_executable(dm03_struct_var3 dm03_struct_var3.c)
add_executable(dm04_struct_point dm04_struct_point.c)
add_executable(dm05_struct_sizeof dm05_struct_sizeof.c)
add_executable(dm06_struct_bit dm06_struct_bit.c)
add_executable(dm07_union dm07_union.c)
add_executable(dm08_union_big_endian dm08_union_big_endian.c)
add_executable(dm09_enum dm09_enum.c)
