add_executable(dm01_link_create_print_free dm01_link_create_print_free.c)
add_executable(dm02_link_search_node dm02_link_search_node.c)
add_executable(dm03_link_delete_node dm03_link_delete_node.c)
add_executable(dm04_link_insert_node dm04_link_insert_node.c)
add_executable(dm05_link_order dm05_link_order.c)
add_executable(dm06_link_reverse dm06_link_reverse.c)
add_executable(dm07_double_link_create_print_free dm07_double_link_create_print_free.c)
add_executable(dm08_double_link_delete_node dm08_double_link_delete_node.c)
add_executable(dm09_double_link_insert_node dm09_double_link_insert_node.c)
