add_executable(dm01_pid dm01_pid.c)
add_executable(dm02_fork1 dm02_fork1.c)
add_executable(dm03_fork2 dm03_fork2.c)
add_executable(dm04_fork3 dm04_fork3.c)
add_executable(dm05_wait dm05_wait.c)
add_executable(dm06_waitpid dm06_waitpid.c)
add_executable(dm07_atexit dm07_atexit.c)
add_executable(dm08_vfork1 dm08_vfork1.c)
add_executable(dm09_vfork2 dm09_vfork2.c)
add_executable(dm10_execl dm10_execl.c)
add_executable(dm11_execlp dm11_execlp.c)
add_executable(dm12_test dm12_test.c)
add_executable(dm12_execle dm12_execle.c)
add_executable(dm13_execv dm13_execv.c)
add_executable(dm14_execvp dm14_execvp.c)
add_executable(dm15_execve dm15_execve.c)
add_executable(dm16_system dm16_system.c)
add_executable(dm17_system_command dm17_system_command.c)
